examples/valid/program34.c
int fibonacci(int n) {
    if (n <= 1) {
        return n;
    }
    return fibonacci(n - 1) + fibonacci(n - 2);
}

int main(void) {
    int result;
    result = fibonacci(6);
    return result;
}

