examples/invalid/program75.c
int main(void) {
    int 4ever;
    4ever = 2;
    return 4ever;
}


